--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.2",
         "laravel/framework": "^12.0",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.1",
+        "laravel/tinker": "^2.10.1",
+        "league/csv": "^9.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
